<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BaseLoginActivity">
        <RelativeLayout
            android:id="@+id/login_form_root"
            android:paddingBottom="48dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="48dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Login progress -->
            <LinearLayout
                android:id="@+id/login_progress"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/login_progress_progressbar"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/login_progress_title"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/zlcore_login_signing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:visibility="visible"
                android:id="@+id/login_form"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/login_form_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/login_form_header"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/login_form_icon"
                            android:layout_gravity="center"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            app:civ_border_overlay="true"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="6dp"/>

                        <TextView
                            android:id="@+id/login_form_title"
                            android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/login_form_body"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/login_form_userid_textinputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/login_form_userid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/zlcore_prompt_email"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/login_form_password_textinputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/login_form_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/zlcore_prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/zlcore_action_sign_in_short"
                                android:imeOptions="actionGo"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <LinearLayout
                            android:layout_marginTop="16dp"
                            android:id="@+id/loginTypeSelectorPanel"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:text="Login As : "
                                android:layout_height="wrap_content" />
                            <Spinner
                                android:id="@+id/loginTypeSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </LinearLayout>
                        <Button
                            android:id="@+id/login_form_button"
                            style="?android:textAppearanceSmall"
                            android:textColor="@color/textColorButtonNormal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_gravity="center_horizontal"
                            android:minWidth="200dp"
                            android:text="@string/zlcore_action_sign_in"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/login_form_credential_infoView"
                            android:textStyle="italic|bold"
                            android:visibility="gone"
                            android:layout_marginTop="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/login_form_footerView"
                            android:visibility="gone"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal|bottom"
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>